unpackaged/main/default/objects/Notification_Rule__c/Notification_Rule__c.object-meta.xml
<CustomObject>
    <label>Notification Rule</label>
    <nameField>
        <displayFormat>NR-{00000}</displayFormat>
        <label>Notification Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>