unpackaged/main/default/objects/Notification_Rule__c/fields/Digest_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Digest_Cadence__c</fullName>
    <label>Digest Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>