unpackaged/main/default/objects/Notification_Rule__c/fields/Digest_Frequency_Hour__c.field-meta.xml
<CustomField>
    <fullName>Digest_Frequency_Hour__c</fullName>
    <description>Hour of day (0-23) when hourly digest delivery should run.</description>
    <label>Digest Frequency Hour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>12:00 AM</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1:00 AM</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2:00 AM</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3:00 AM</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4:00 AM</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5:00 AM</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>6:00 AM</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7:00 AM</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8:00 AM</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>9:00 AM</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10:00 AM</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11:00 AM</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12:00 PM</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>1:00 PM</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>2:00 PM</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>3:00 PM</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>4:00 PM</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>5:00 PM</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>6:00 PM</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>7:00 PM</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>8:00 PM</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>9:00 PM</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>10:00 PM</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>11:00 PM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>