unpackaged/main/default/objects/Notification_Rule__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
                <default>true</default>
                <label>Immediate</label>
            </value>
            <value>
                <fullName>Digest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>