unpackaged/main/default/objects/Notification_Rule__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notification Rules</relationshipLabel>
    <relationshipName>Notification_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>