unpackaged/main/default/objects/Notification_Rule__c/fields/Is_System_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_System_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks org-wide template rules managed by Notification Center admins.</description>
    <inlineHelpText>When checked, this rule is a system default applied to all users until they override it.</inlineHelpText>
    <label>System Default</label>
    <type>Checkbox</type>
</CustomField>