unpackaged/main/default/objects/Notification_Rule__c/fields/Legacy_Preference_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Preference_Id__c</fullName>
    <description>Original Notification_Preference__c record Id from data migration.</description>
    <externalId>true</externalId>
    <label>Legacy Preference Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>