unpackaged/main/default/objects/Notification_Rule__c/fields/Legacy_Preference_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Preference_Number__c</fullName>
    <description>Original Notification_Preference__c auto-number from data migration.</description>
    <label>Legacy Preference Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>