unpackaged/main/default/objects/Notification_Rule__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Notification Rules</relationshipLabel>
    <relationshipName>Notification_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>