unpackaged/main/default/objects/Notification_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Type__c</columns>
    <columns>Channel__c</columns>
    <columns>Household__c</columns>
    <columns>Frequency__c</columns>
    <columns>Digest_Cadence__c</columns>
    <columns>Is_Active__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>